--- a/ams-front-end-test/src/components/cart/cartbadge/CartBadge.module.css
+++ b/ams-front-end-test/src/components/cart/cartbadge/CartBadge.module.css
@@ -1,11 +1,11 @@
 .cartBadge{
     position: absolute;
     right: 0;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    font-weight: bold;
     height: 1rem;
     width: 1rem;
-    border-radius: 100%;
-    background-color: red;
+    border-radius: 100%;    
     text-align: center;
     
     transform: translateX(3);
