--- a/ams-front-end-test/src/pages/product/Product.module.css
+++ b/ams-front-end-test/src/pages/product/Product.module.css
@@ -1,13 +1,52 @@
 .grid {
     display: grid;    
-    width: 100%;
+    width: fit-content;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 300px;
     column-gap: 50px;
     row-gap: 100px;
-  
+    padding: 50px;
+    max-height: 500px;
+    overflow-y: auto;
+    place-items: center;
+    border-radius: 16px;
+    margin-right:  100px;
+    margin-left: 100px;
+    object-fit: cover;
+    margin-top: 6%;
 }
 .image{
     width: fit-content;
     
+}
+.searchbar{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-right: 19%;
+    margin-bottom: 8px;
+}
+.gridContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);   
+    width: 100%;
+    max-height: 500px;
+    border-radius: 16px;
+    margin-right:  100px;
+    margin-left: 100px;
+    padding: 50px;
+    place-items: center;
+}
+.productImage{
+    width: 250px;
+    height: auto;
+}
+.detailsContainer{
+    display: flex;
+    flex-direction: row;    
+}
+.details {
+    width: 340px;
+    height: 210px;
+    border-radius: 20px;
 }
