--- a/ams-front-end-test/src/components/searchbar/Searchbar.module.css
+++ b/ams-front-end-test/src/components/searchbar/Searchbar.module.css
@@ -1,6 +1,8 @@
 .container{
+  display: flex;
+  justify-content: space-between;
     height: 32px;
-     width: 221px; 
+     width: fit-content;
      gap:3px; 
      display: flex; 
      padding: 5px; 
@@ -11,7 +13,8 @@
 }   
 .input {
     border: none;       
-    outline: none;      
+    outline: none;     
+    
   }
   
   .input:focus {
@@ -23,6 +26,6 @@
     outline: none;
     background: white;
     font-size: 21px;
-    opacity: 50%;
+    
   }
   
