--- a/ams-front-end-test/src/layout/Styles.module.css
+++ b/ams-front-end-test/src/layout/Styles.module.css
@@ -1,5 +1,6 @@
 .desktop {
-    display: grid;
+    /* display: grid;
+    grid-template-rows: repeat(1,1fr); */
     padding: 0px;    
     height: 100vh;            
     place-items: center;    
